# app_crm

./: .env-sample  .gitignore  .pre-commit-config.yaml  Makefile  PRD_spec.md  README.md  manage.py  pyproject.toml
apps_django/: asgi.py  settings.py  settings_test.py  urls.py  views.py  wsgi.py
apps_django/contas/: apps.py  backends.py  models.py
apps_django/contas/migrations/: 0001_initial.py
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md  app_specs.md  checklist_pre_codigo.md  first_prd.md
templates/: base.html
tests/borda_django/: test_backends.py  test_views.py
