[project]
name = "crm"
version = "0.1.0"
description = "Base Django para CRM de gestão empresarial."
requires-python = ">=3.14,<4.0"
dependencies = [
    "django>=6.0.3,<7.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "djlint>=1.36.0",
    "pytest>=8.0.0",
    "pytest-django>=4.9.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 170
target-version = "py314"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".gitignore",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "W", "PL", "PT"]
ignore = ["B008", "PLR2004", "PLR0917", "PLR0913"]

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "apps_django"]
DJANGO_SETTINGS_MODULE = "apps_django.settings_test"
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["core", "apps_django"]

[tool.djlint]
profile = "django"
indent = 4
max_line_length = 170
format_css = true
format_js = true

[tool.hatch.build.targets.wheel]
packages = ["apps_django", "core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
